[package]
name = "bos-signage"
version = "0.0.1"
authors = ["Seth Feibus <seth@archetype.computer>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "1.3.0"
near-sdk = "5.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
